[package]
name = "qmp_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2"
clap = { version = "4.5.23", features = ["derive"] }
good_lp = "1.10.0"
kiss3d = "0.32"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
#qhull = "0.3.1"
qhull = { git = "https://github.com/LucaCiucci/qhull-rs" }
nalgebra = "0.32"
